--- a/src/data/grammar/mtg/community/mtg-pros.yaml
+++ b/src/data/grammar/mtg/community/mtg-pros.yaml
@@ -50,7 +50,7 @@
       "Ben Stark[#malePronouns#]",
       "Anton Jonsson[#malePronouns#]",
       "Dirk Baberowski[#malePronouns#]",
-      "Samuel Pardee[#malePronouns#]",
+      "Sam Pardee[#malePronouns#]",
       "Paul Rietzl[#malePronouns#]",
       "Guillaume Wafo-Tapa[#malePronouns#]",
       "Andrew Cuneo[#malePronouns#]",
