--- a/src/data/grammar/headlines/mtg-card-of-the-day.yaml
+++ b/src/data/grammar/headlines/mtg-card-of-the-day.yaml
@@ -1,9 +1,9 @@
 ---
 cotdImage:
-  - "[_cardname:#randomRealCard#][#cotdCardNameSearch#][_cotdDescription:#cotdDescription#][_cotdImgUrl:https#colon#//goodgamery.com/api/mtg/image?card=#_cardname#][_title:#cotdTitle#]#_title#: #_cardname##cotdImageHtml#"
-  - "[#cotdCreatureTypeSearch#][_cotdDescription:#cotdCreatureTypeDescription#][_title:#cotdTitle#]#_title#: #_cardname##cotdImageHtml#"
-  - "[#searchableCardCategory#][#cotdCardCategorySearch#][_cotdDescription:#cotdTextDescription#][_title:#cotdTitle#]#_title#: #_cardname##cotdImageHtml#"
-  - "[_cotdDescription:#cotdCustomQueryDecscription#][_title:#cotdTitle#]#_title#: #_cardname##cotdImageHtml#"
+  - "[#initCotdImage#][_cardname:#randomRealCard#][#cotdCardNameSearch#][_cotdDescription:#cotdDescription#][_cotdImgUrl:https#colon#//goodgamery.com/api/mtg/image?card=#_cardname#][_title:#cotdTitle#]#_title#: #_cardname##cotdImageHtml#"
+  # - "[#initCotdImage#][#cotdCreatureTypeSearch#][_cotdDescription:#cotdCreatureTypeDescription#][_title:#cotdTitle#]#_title#: #_cardname##cotdImageHtml#"
+  # - "[#initCotdImage#][#searchableCardCategory#][#cotdCardCategorySearch#][_cotdDescription:#cotdTextDescription#][_title:#cotdTitle#]#_title#: #_cardname##cotdImageHtml#"
+  # - "[#initCotdImage#][_cotdDescription:#cotdCustomQueryDecscription#][_title:#cotdTitle#]#_title#: #_cardname##cotdImageHtml#"
 
 cotdCardNameSearch: "#_cardName#[#_cardname.cardSearchByName(1)#][_cardname:#_cardName1#][_cardset:#_cardSet1#][_cardtype:#_cardSomeTypeOrSubtype1#][_cardcolor:#_cardColor1#][_cotdImgUrl:#_cardImgUrl1#][_cardDesc:#_cardType#][_cardDescCategory:#_cardDesc.s#]"
 cotdCardTypeSearch: "[_cardType:#cardTypes#][#_cardType.cardSearchByType(5)#][_cardname:#_cardName1#][_cardset:#_cardSet1#][_cardtype:#_cardSomeTypeOrSubtype1#][_cardcolor:#_cardColor1#][_cotdImgUrl:#_cardImgUrl1#][_cardDesc:#_cardType#][_cardDescCategory:#_cardDesc.s#]"
@@ -11,6 +11,8 @@ cotdCreatureTypeSearch: "[_creatureType:#creatureTypes#][#_creatureType.cardSear
 cotdCardCategorySearch: "[_cardText:#_cardCategorySearchTerm#][#_cardText.cardSearchByText(5)#][_cardname:#_cardName1#][_cardset:#_cardSet1#][_cardtype:#_cardSomeTypeOrSubtype1#][_cardcolor:#_cardColor1#][_cotdImgUrl:#_cardImgUrl1#][_cardDesc:#_cardCategory#][_cardDescCategory:#_cardCategoryClass#]"
 cotdLegendaryCreatureSearch: "[_customQuery:t=legendary t=creature][#cotdCustomSearch#][_legendName:#_cardFamiliarName1#]"
 cotdCustomSearch: "[#_customQuery.cardSearchCustomQuery(1)#][_cardname:#_cardName1#][_cardset:#_cardSet1#][_cardtype:#_cardSomeTypeOrSubtype1#][_cardcolor:#_cardColor1#][_cotdImgUrl:#_cardImgUrl1#][_cardDesc:#_cardCategory#][_cardDescCategory:#_cardCategoryClass#]"
+
+initCotdImage: "[_cardSomeCreatureType1:#creatureTypes#]"
 
 cotdParameterizedCardSearch:
   - "#cotdCardTypeSearch#"
@@ -26,11 +28,12 @@ cotdTitle:
   - CARD OF THE DAY
 
 cotdDescription:
-  - "This blast from the [_time:future,past,future,past,present,distant future,distant past]#_time# is back, and it's still the only way for a player to #marginalThingToDo#! Although with #keyword.lowercase# coming back, we can't promise that [_promise:any keyword is really off limits from now on,we're not going to put this ability on #rarity.a# in the next set,that we have any idea what we're doing,it still actually works within the rules]#_promise#."
-  - "When your opponent plays #kindaGood.a# spell, your first [_cardlinkName:#cardWhichDrawsCards#]#_cotdHtmlCardLink# is probably to try to cause them to have a [_cardlinkName:#cardWhichCountersSpells#]#_cotdHtmlCardLink#."
-  - "This card seems [_kindaGood:#kindaGood#]#_kindaGood#...until you realize that #surprisingResult#. Then it [_result:becomes #reallyGood#,seems really #_kindaGood#]#_result#."
-  - "Every player aspires to have as many [_cardlinkName:#_cardname.sIfNeeded#]#_cotdHtmlCardLink# as they have #mtgColors# #deckArchOrCategory# decks."
-  - "#multicolor# #deckLimitedArchetype.capitalize# may be the favored deck for this card, but that doesn't mean #multicolor# #keyword# isn't always happy to have another tool in its [_toolbox:back pocket,arsenal,toolbox,kit,playbook]#_toolbox#!"
+  # - "This blast from the [_time:future,past,future,past,present,distant future,distant past]#_time# is back, and it's still the only way for a player to #marginalThingToDo#! Although with #keyword.lowercase# coming back, we can't promise that [_promise:any keyword is really off limits from now on,we're not going to put this ability on #rarity.a# in the next set,that we have any idea what we're doing,it still actually works within the rules]#_promise#."
+  # - "When your opponent plays #kindaGood.a# spell, your first [_cardlinkName:#cardWhichDrawsCards#]#_cotdHtmlCardLink# is probably to try to cause them to have a [_cardlinkName:#cardWhichCountersSpells#]#_cotdHtmlCardLink#."
+  # - "This card seems [_kindaGood:#kindaGood#]#_kindaGood#...until you realize that #surprisingResult#. Then it [_result:becomes #reallyGood#,seems really #_kindaGood#]#_result#."
+  # - "Every player aspires to have as many [_cardlinkName:#_cardname.sIfNeeded#]#_cotdHtmlCardLink# as they have #mtgColors# #deckArchOrCategory# decks."
+  # - "#multicolor# #deckLimitedArchetype.capitalize# may be the favored deck for this card, but that doesn't mean #multicolor# #keyword# isn't always happy to have another tool in its [_toolbox:back pocket,arsenal,toolbox,kit,playbook]#_toolbox#!"
+  - "Step one: #randomKeywordCardAction#[_payoff:,,#gameActionPayoff#]. Step two: [_noise:#soundEmanation#]#_noise.capitalize# [_how:at #_them#,#adverb#]#_how# (#gameActionReaction#). Step three: [_nextStep:one,two][_step3:profit,#verbReflexive# yourself,#verbStrictlyIntransitive#,Go to Step #_nextStep#]#_step3.capitalize#. Optional step four: [_verb1:pet,#verbTransitive#][_pet:#_cardSomeCreatureType1##neutralPronouns#][_verb2:thank,berate,praise,congratulate,confront,salute,applaud,tease][_goodPet:good #_pet#,#adj# #_pet#][_verb3:#verbIntransitiveGerund#,#verbReflexiveGerund# #themselves#,being #_goodPet.a#][_activityAdj:leisurely,long,quiet,well-deserved][_activityTime:morning,afternoon,evening,weekend,day,week][_activityVerb:practice,take up,research,plan #_activityAdj.a# #_activityTime# of][_activity:#nounActivity#,#verbIntransitiveGerund#][_step4:#_verb1# your #_pet# and #_verb2# #them# for #_verb3#,practice #nounActivity#]#_step4.capitalize#."
 
 cotdTextDescription:
   - "It's no surprise that #_cardcolor.capitalize#'s [_superlative:#cardSuperlative#,second-#cardSuperlative#,#adjSuperlative#]#_superlative# #_cardCategory# finds its way into almost every [_decktype:#format#,#deckArchOrCategory#]#_decktype# deck that can support it. Plus it [_verbs:offers,enables,makes possible]#_verbs# some of the most #interestingPlay# the game has ever seen."
@@ -41,11 +44,6 @@ cotdTextDescription:
   - "This [_preDesc:,#cardQuality# ]#_preDesc##_cardDesc# has had [_who:#pros#,#psychographic.s#,#pro#,#person#][_reactionVerb:salivating,drooling,giggling,dancing,cartwheeling,rejoicing,grumbling,talking,confused,making predictions,trying to break it,calling for its banning][_verbing:#_reactionVerb#,#verbIntransitiveGerund#]#_who# #_verbing# since it was [_verbed:first revealed,first spoiled,first unbanned,first printed,reprinted]#_verbed#."
   - "#adjOrCardQuality.capitalize#, #adjOrCardQuality#, and #adjOrCardQuality#—one of the #adjSuperlativeOrCardSuperlative# and #adjSuperlativeOrCardSuperlative# #_cardCategory.s# ever printed returns!"
   - "[_cardSomeCreatureType1:#creatureTypes#][#cotdCardCategorySearch#]It [_helps:helps,doesn't hurt]#_helps# that this [_great:great,great,#cardQuality#]#_great# #_cardCmc1.wholeNumberToText#-mana #_cardCategory# can #gameplayDevelopment#, but[_com:,#comma#][_honestly:, honestly#_com#, really#_com#, actually#_com#, admittedly#_com#, to be fair#_com#]#_honestly# we'd [_playIt:play it anyway,play it no matter what,just run it,just play it,consider playing it,maindeck it]#_playIt# [_for:for,just for,simply for]#_for# [_chance:chance,excuse]#_chance.a# to [_say:yell,#verbExclaim#]#_say# [_punct:,!,!,?][_italicText:#_cardname.lowercase#][_phrase:#mtgCatchphrase#,#mtgSlangTerm#][_utterance:#_cardname.allCaps#!,#_cardname.allCaps#?,#_italicize#,#_phrase.allCaps#]“#_utterance#”[_adj:our best,our very best,our meanest,a flawless,an uncanny,a deadpan,our loudest,a menacing,a friendly,our most convincing,our #adjSuperlative#,#adjSuperlative.a#][_voice:#_cardSomeCreatureType1.lowercase#,#cotdPersonality#,#characterClass#][_yellWhere:ears,faces][_inVoice:,, in #_adj# #_voice# voice, in #_adj# #_voice# voice, at #person#, at the top of our lungs, until we're hoarse, until someone calls a judge, in our opponents' #_yellWhere#]#_inVoice#."
-
-
-cotdPetOwner:
-- "#historicalFigure#"
-- "#character#"
 
 cotdCreatureTypeDescription:
  - "Only on #plane# would people see this #adjImpressive# #_creatureType# and nickname it [_nickname:The #adj.capitalizeAll.hyphenate# #characterClass.capitalizeAll#,#planeswalkerFirstName#'s #characterClass.capitalizeAll#]“#_nickname#”."
@@ -147,6 +145,21 @@ _drawXDiscardYRare:
 
 _drawXDiscardYSearchQuery: '[#_drawXDiscardY#][_s:#_s#][_customQuery:text="draw#_s# #_x# #_xcards#" text="discard#_s# #_y# #_ycards#"][#cotdCustomSearch#]'
 
+gameActionPayoff:
+- " for powerful effects"
+- " to gain a commanding board position"
+- " for ... reasons"
+- "#comma# even if it's bad]#gameActionPayoff#"
+
+gameActionReaction:
+- "they find this [_adv:,really,very,quite,surprisingly,fairly,unbelievably,incredibly]#_adv# [_adj:#adj#,#adjValue#]#_adj#"
+- "people may be [_effect:confused,annoyed,disturbed,upset,soothed,frightened]#_effect# by this"
+- "really [_doWhat:try to sell this part,get into it,go overboard]#_doWhat#"
+- "but don't draw attention to yourself"
+- "[_who:#pro#,#character#]#_who# does this all the time"
+- "yes, we're serious"
+- "and wait for #_them# to #_noise# back"
+
 adjOrCardQuality:
 - "#adj#"
 - "#cardQuality#"
@@ -197,7 +210,6 @@ gameplayDevelopment:
 - '#gameplayHelp# win a [_war:counter,attrition]#_war# war'
 - '#gameplayHelp# recover from a board wipe'
 - '#gameplayHelp# [_stop:shut down,slow down,counter,defend against]#_stop# opposing [_challenge:bombs,aggression,#cardCategoryClassTerm#,#deckObjective#]#_challenge#'
-
 
 gameplayPosition:
 - "#adjChallenging# [_situation:combat step,board state,game state,game]#_situation#"
