--- a/src/data/grammar/images/mtg-in-graphics.yaml
+++ b/src/data/grammar/images/mtg-in-graphics.yaml
@@ -41,7 +41,7 @@ inGraphicsStep:
 - "Tear #_card1# into pieces and [_where:up your nose,into your ears,into your pockets,into your cheeks like a chipmunk,down the front of your pants][_then:eat it,sprinkle them over your opponent's head,cram them #_where#,frantically try to piece them back together]#_then#"
 - Move to the beginning of combat step
 - "Ask your opponent [_really:really a,a good,their favorite][_question:“how many cards in hand?”,“mind if I smoke?”,“would you like some #pluralNounOrMassNoun#?”,“got any trades?”,“any fast effects?”,“can I take that back?”,“come here often?”,if #_eitherCard# is #_really# #typeOfCard#,if they think you look like #character#,“just who do you think your are?”,“am I being detained?”,about #massNoun# magic,if it's #occasion#]#_question#"
-- "Tap [_what:too much mana,too little mana,exactly the right amount of mana,#randomNonbasicLandCard#,#count# #basicLands.s#]#_what#"
+- "Tap [_what:too much mana,too little mana,exactly the right amount of mana,#randomNonbasicLandCard#,#count# #basicLands.sIfNeeded#]#_what#"
 - "“Accidentally” reveal #_eitherCard# while shuffling"
 - '[_tutorCard:#adj.capitalizeAll# Tutor,#randomTutorCard#][_tutor:Tutor for #_eitherCard#,Search for #_eitherCard# with #_tutorCard#]#_tutor#'
 - 'Cast [_nameCard:Pithing Needle,Meddling Mage,Demonic Consultation,Predict,Tunnel Vision]#_nameCard# naming #_card1#'
@@ -65,12 +65,15 @@ inGraphicsStep:
 - 'Offer to sell #_card1# to your opponent for [_price:#priceUSD#,#priceUSD#,a kiss,a song and dance,a sack of #pluralNounOrMassNoun#]#_price#'
 - 'Point to #_card2# and tell your opponent [_guy:guy,gal,fella,dame,dude,jerk,joker,nerd,twit,clown]“save #typeOfCard.a# to deal with this #_guy#.”'
 - "Stick #_card2# into your mouth and [_then:let it hang out like a tongue,swallow it whole,spit it back onto the table,wait for it to get soggy,try to read it with your tongue]#_then#"
-- "Fashion [_headgear:crown,hat,elaborate headdress,sombrero,helmet]#_headgear.a# from copies #_card2# and place it on [_whose:your,your opponent's,a judge's]#_whose# head"
+- "Fashion [_headgear:crown,hat,elaborate headdress,sombrero,helmet]#_headgear.a# from copies of #_card2# and place it on [_whose:your,your opponent's,a judge's]#_whose# head"
 - "Scoop a handful of #massNoun# out of your pocket and [_then:drop it theatrically onto the table,cram it into your mouth,place it carefully on top of your head,offer it temptingly to your opponent,smear it on your face,pretend it's whispering secrets to you,smear it all over your face]#_then#"
 - "[_make:Pretend to make,Make]#_make# #_card1# and #_card2# “kiss each other”"
 - "Tell your opponent that you lost to #anyPersonality# last round"
 - "[_verb:Insist,Explain,Announce]#_verb# that you're currently [_doingProject:filming a documentary about,writing a book about,conducting a social experiment with]#_doingProject# #_eitherCard#"
 - "[_perform:Perform,Stage,Put on]#_perform# a short “puppet show” with #_card1# and #_card2#"
+- "#randomKeywordAction#"
+- "#randomKeywordAction#"
+- "#randomKeywordAction#"
 
 typeOfCard: 
 - "#cardCategory#"
