--- a/src/data/grammar/mtg/card-related/card-random-action.yaml
+++ b/src/data/grammar/mtg/card-related/card-random-action.yaml
@@ -48,33 +48,33 @@ randomKeywordCardAction:
 - "#cardRandomAction_Manifest#"
 - "#cardRandomAction_Exert#"
 
-cardRandomAction_Cast: "Cast #_cardActionVerbYourSpells#"
-cardRandomAction_Counter: "Counter #_cardActionVerbAllSpells#"
+cardRandomAction_Cast: "cast #_cardActionVerbYourSpells#"
+cardRandomAction_Counter: "counter #_cardActionVerbAllSpells#"
 cardRandomAction_Create: ["#cardRandomAction_Create_One#", "#cardRandomAction_Create_Many#"]
-cardRandomAction_Destroy: "Destroy #_cardActionVerbPermanent#"
-cardRandomAction_Discard: "Discard #_cardActionVerbCardsInHand#[_from:, from your hand, in your hand]"
-cardRandomAction_Exile: "Exile #_cardActionVerbPermanent#"
-cardRandomAction_Play: "Play #_cardActionVerbYourSpells#"
+cardRandomAction_Destroy: "destroy #_cardActionVerbPermanent#"
+cardRandomAction_Discard: "discard #_cardActionVerbCardsInHand#[_from:, from your hand, in your hand]"
+cardRandomAction_Exile: "exile #_cardActionVerbPermanent#"
+cardRandomAction_Play: "play #_cardActionVerbYourSpells#"
 cardRandomAction_Regenerate: "Regenerate #_cardActionVerbPermanent#"
-cardRandomAction_Reveal: "Reveal #_cardActionVerbCardsInHand#[_fromWhere:from your hand,from your library,from your sideboard,from your trade binder] #_fromWhere#"
-cardRandomAction_Sacrifice: "Sacrifice #_cardActionVerbPermanent#"
-cardRandomAction_Search: "Search [_zone:#_whose# library,#_whose# library,#_whose# graveyard,#_whose# graveyard#comma# hand#comma# and library]#_zone# for #_cardActionVerbAnyCard#"
-cardRandomAction_Shuffle: "Shuffle #_cardActionVerbPermanent# into #_whose# library"
-cardRandomAction_Tap: "Tap #_cardActionVerbPermanent#"
-cardRandomAction_Untap: "Untap #_cardActionVerbPermanent#"
-cardRandomAction_Fateseal: "Fateseal[_who:yourself,your opponent] #_who#"
-cardRandomAction_Clash: "Clash with[_who:your opponent,your opponent,yourself] #_who#"
-cardRandomAction_Planeswalk: "Planeswalk to #planechasePlane#"
-cardRandomAction_SetInMotion: "Set #cardRandomAction_SetInMotion_Scheme# in motion"
-cardRandomAction_Proliferate: "Proliferate #_countTimes#"
+cardRandomAction_Reveal: "reveal #_cardActionVerbCardsInHand#[_fromWhere:from your hand,from your library,from your sideboard,from your trade binder] #_fromWhere#"
+cardRandomAction_Sacrifice: "sacrifice #_cardActionVerbPermanent#"
+cardRandomAction_Search: "search [_zone:#_whose# library,#_whose# library,#_whose# graveyard,#_whose# graveyard#comma# hand#comma# and library]#_zone# for #_cardActionVerbAnyCard#"
+cardRandomAction_Shuffle: "shuffle #_cardActionVerbPermanent# into #_whose# library"
+cardRandomAction_Tap: "tap #_cardActionVerbPermanent#"
+cardRandomAction_Untap: "untap #_cardActionVerbPermanent#"
+cardRandomAction_Fateseal: "fateseal[_who:yourself,your opponent] #_who#"
+cardRandomAction_Clash: "clash with[_who:your opponent,your opponent,yourself] #_who#"
+cardRandomAction_Planeswalk: "planeswalk to #planechasePlane#"
+cardRandomAction_SetInMotion: "set #cardRandomAction_SetInMotion_Scheme# in motion"
+cardRandomAction_Proliferate: "proliferate #_countTimes#"
 cardRandomAction_Transform: ["#cardRandomAction_Tranform_One#", "#cardRandomAction_Tranform_Many#"]
-cardRandomAction_Detain: "Detain #_cardActionVerbPermanent#"
-cardRandomAction_Populate: "Populate #_countTimes#"
-cardRandomAction_Vote: "Vote for “#willOfTheCouncilVoteChoice.capitalize#”"
+cardRandomAction_Detain: "detain #_cardActionVerbPermanent#"
+cardRandomAction_Populate: "populate #_countTimes#"
+cardRandomAction_Vote: "vote for “#willOfTheCouncilVoteChoice.capitalize#”"
 cardRandomAction_Manifest:  ["#cardRandomAction_Manifest_One#", "#cardRandomAction_Tranform_Many#"]
-cardRandomAction_Investigate: "Investigate #_countTimes#"
-cardRandomAction_Exert: "Exert #_cardActionVerbPermanent#"
-cardRandomAction_Explore: "Explore #_countTimes#"
+cardRandomAction_Investigate: "investigate #_countTimes#"
+cardRandomAction_Exert: "exert #_cardActionVerbPermanent#"
+cardRandomAction_Explore: "explore #_countTimes#"
 
 cardRandomAction_SetInMotion_Scheme:
 - "#archenemyScheme##_them_it#"
@@ -83,15 +83,14 @@ cardRandomAction_SetInMotion_Scheme:
 _them_it: "[_them:it]#"
 _them_them: "[_them:them]"
 
+cardRandomAction_Create_One:  "create [_aOne:#creatureTypes.a#,#creatureTypes.a#,exactly one #creatureTypes#]#_aOne# token#_them_it#"
+cardRandomAction_Create_Many: "create #count# #creatureTypes# tokens#_them_them#"
 
-cardRandomAction_Create_One:  "Create [_aOne:#creatureTypes.a#,#creatureTypes.a#,exactly one #creatureTypes#]#_aOne# token#_them_it#"
-cardRandomAction_Create_Many: "Create #count# #creatureTypes# tokens#_them_them#"
+cardRandomAction_Manifest_One: "#_them_it#manifest [_card:card,#cardClassificationBase#][_what:the top card of your library,#_card.a# from your hand#_them_it#,#_card.a# from your sideboard]#_what#"
+cardRandomAction_Manifest_Many: "#_them_them#manifest [_card:card,#cardClassificationBase#][_what:the top #count# cards of your library#_them_them#,#cardCopyCount# #_card.sIfNeeded# from your hand#_them_them#]#_what##_them_them#"
 
-cardRandomAction_Tranform_One: "#_them_it#Transform #_cardActionVerbPermanentSingle# into #cardRandomAction_Tranform_Target_Single#"
-cardRandomAction_Tranform_Many: "#_them_them#Transform #_cardActionVerbPermanentMulti# into #cardRandomAction_Tranform_Target_Multi#"
-
-cardRandomAction_Manifest_One: "#_them_it#Manifest [_card:card,#cardClassificationBase#][_what:the top card of your library,#_card.a# from your hand#_them_it#,#_card.a# from your sideboard]#_what#"
-cardRandomAction_Manifest_Many: "#_them_them#Manifest [_card:card,#cardClassificationBase#][_what:the top #count# cards of your library#_them_them#,#cardCopyCount# #_card.sIfNeeded# from your hand#_them_them#]#_what##_them_them#"
+cardRandomAction_Tranform_One: "#_them_it#transform #_cardActionVerbPermanentSingle# into #cardRandomAction_Tranform_Target_Single#"
+cardRandomAction_Tranform_Many: "#_them_them#transform #_cardActionVerbPermanentMulti# into #cardRandomAction_Tranform_Target_Multi#"
 
 cardRandomAction_Tranform_Target_Single:
 - "#randomPermanentCard##_them_it#"
