--- a/src/data/grammar/headlines/mtg-card-of-the-day.yaml
+++ b/src/data/grammar/headlines/mtg-card-of-the-day.yaml
@@ -1,10 +1,14 @@
 ---
 cotdImage:
-  - "[#initCotdImage#][_cardname:#randomRealCard#][#cotdCardNameSearch#][_cotdDescription:#cotdDescription#][_cotdImgUrl:https#colon#//goodgamery.com/api/mtg/image?card=#_cardname#][_title:#cotdTitle#]#_title#: #_cardname##cotdImageHtml#"
-  - "[#initCotdImage#][#cotdCreatureTypeSearch#][_cotdDescription:#cotdCreatureTypeDescription#][_title:#cotdTitle#]#_title#: #_cardname##cotdImageHtml#"
-  - "[#initCotdImage#][#searchableCardCategory#][#cotdCardCategorySearch#][_cotdDescription:#cotdTextDescription#][_title:#cotdTitle#]#_title#: #_cardname##cotdImageHtml#"
-  - "[#initCotdImage#][_cotdDescription:#cotdCustomQueryDecscription#][_title:#cotdTitle#]#_title#: #_cardname##cotdImageHtml#"
+  - "#cotdImage_RandomCard#"
+  - "#cotdImage_RandomCreature#"
+  - "#cotdImage_RandomCategoryCard#"
+  - "#cotdImage_RandomCustomSearchCard#"
 
+cotdImage_RandomCard: "[#initCotdImage#][_cardname:#randomRealCard#][#cotdCardNameSearch#][_cotdDescription:#cotdDescription#][_cotdImgUrl:https#colon#//goodgamery.com/api/mtg/image?card=#_cardname#][_title:#cotdTitle#]#_title#: #_cardname##cotdImageHtml#"
+cotdImage_RandomCreature: "[#initCotdImage#][#cotdCreatureTypeSearch#][_cotdDescription:#cotdCreatureTypeDescription#][_title:#cotdTitle#]#_title#: #_cardname##cotdImageHtml#"
+cotdImage_RandomCategoryCard: "[#initCotdImage#][#searchableCardCategory#][#cotdCardCategorySearch#][_cotdDescription:#cotdTextDescription#][_title:#cotdTitle#]#_title#: #_cardname##cotdImageHtml"
+cotdImage_RandomCustomSearchCard: "[#initCotdImage#][_cotdDescription:#cotdCustomQueryDecscription#][_title:#cotdTitle#]#_title#: #_cardname##cotdImageHtml#"
 cotdCardNameSearch: "#_cardName#[#_cardname.cardSearchByName(1)#][_cardname:#_cardName1#][_cardset:#_cardSet1#][_cardtype:#_cardSomeTypeOrSubtype1#][_cardcolor:#_cardColor1#][_cotdImgUrl:#_cardImgUrl1#][_cardDesc:#_cardType#][_cardDescCategory:#_cardDesc.s#]"
 cotdCardTypeSearch: "[_cardType:#cardTypes#][#_cardType.cardSearchByType(5)#][_cardname:#_cardName1#][_cardset:#_cardSet1#][_cardtype:#_cardSomeTypeOrSubtype1#][_cardcolor:#_cardColor1#][_cotdImgUrl:#_cardImgUrl1#][_cardDesc:#_cardType#][_cardDescCategory:#_cardDesc.s#]"
 cotdCreatureTypeSearch: "[_creatureType:#creatureTypes#][#_creatureType.cardSearchByType(5)#][_cardname:#_cardName1#][_cardset:#_cardSet1#][_cardtype:#_cardSomeTypeOrSubtype1#][_cardcolor:#_cardColor1#][_cotdImgUrl:#_cardImgUrl1#][_cardDesc:#_creatureType#][_cardDescCategory:#_cardDesc.s#]"
@@ -13,6 +17,8 @@ cotdLegendaryCreatureSearch: "[_customQuery:t=legendary t=creature][#cotdCustomS
 cotdCustomSearch: "[#_customQuery.cardSearchCustomQuery(1)#][_cardname:#_cardName1#][_cardset:#_cardSet1#][_cardtype:#_cardSomeTypeOrSubtype1#][_cardcolor:#_cardColor1#][_cotdImgUrl:#_cardImgUrl1#][_cardDesc:#_cardCategory#][_cardDescCategory:#_cardCategoryClass#]"
 
 initCotdImage: "[_cardSomeCreatureType1:#creatureTypes#]"
+
+cotdImageNameAndUrl: "[_cardname:#_cardName1#][_cotdImgUrl:#_cardImgUrl1#]"
 
 cotdParameterizedCardSearch:
   - "#cotdCardTypeSearch#"
@@ -28,12 +34,12 @@ cotdTitle:
   - CARD OF THE DAY
 
 cotdDescription:
-  - "This blast from the [_time:future,past,future,past,present,distant future,distant past]#_time# is back, and it's still the only way for a player to #marginalThingToDo#! Although with #keyword.lowercase# coming back, we can't promise that [_promise:any keyword is really off limits from now on,we're not going to put this ability on #rarity.a# in the next set,that we have any idea what we're doing,it still actually works within the rules]#_promise#."
+  - "This blast from the [_time:future,past,future,past,present,distant future,distant past]#_time# is [_here:here,back]#_here#, and it's still the only way for a player to #marginalThingToDo#! Although with #keyword.lowercase# coming back, we can't promise that [_promise:any keyword is really off limits from now on,we're not going to put this ability on #rarity.a# in the next set,that we have any idea what we're doing,it still actually works within the rules]#_promise#."
   - "When your opponent plays #kindaGood.a# spell, your first [_cardlinkName:#cardWhichDrawsCards#]#_cotdHtmlCardLink# is probably to try to cause them to have a [_cardlinkName:#cardWhichCountersSpells#]#_cotdHtmlCardLink#."
-  - "This card seems [_kindaGood:#kindaGood#]#_kindaGood#...until you realize that #surprisingResult#. Then it [_result:becomes #reallyGood#,seems really #_kindaGood#]#_result#."
+  - "This card seems [_kindaGood:#_cardKindaGood#]#_kindaGood#...until you realize that #surprisingResult#. Then it [_result:becomes #reallyGood#,seems really #_kindaGood#]#_result#."
   - "Every player aspires to have as many [_cardlinkName:#_cardname.sIfNeeded#]#_cotdHtmlCardLink# as they have #mtgColors# #deckArchOrCategory# decks."
   - "#multicolor# #deckLimitedArchetype.capitalize# may be the favored deck for this card, but that doesn't mean #multicolor# #keyword# isn't always happy to have another tool in its [_toolbox:back pocket,arsenal,toolbox,kit,playbook]#_toolbox#!"
-  - "Step one: #randomKeywordCardAction#[_payoff:,,#gameActionPayoff#]. Step two: [_noise:#soundEmanation#]#_noise.capitalize# [_how:at #_them#,#adverb#]#_how# (#gameActionReaction#). Step three: [_nextStep:one,two][_step3:profit,#verbReflexive# yourself,#verbStrictlyIntransitive#,Go to Step #_nextStep#]#_step3.capitalize#. Optional step four: [_verb1:pet,#verbTransitive#][_pet:#_cardSomeCreatureType1##neutralPronouns#][_verb2:thank,berate,praise,congratulate,confront,salute,applaud,tease][_goodPet:good #_pet#,#adj# #_pet#][_verb3:#verbIntransitiveGerund#,#verbReflexiveGerund# #themselves#,being #_goodPet.a#][_activityAdj:leisurely,long,quiet,well-deserved][_activityTime:morning,afternoon,evening,weekend,day,week][_activityVerb:practice,take up,research,plan #_activityAdj.a# #_activityTime# of][_activity:#nounActivity#,#verbIntransitiveGerund#][_step4:#_verb1# your #_pet# and #_verb2# #them# for #_verb3#,practice #nounActivity#]#_step4.capitalize#."
+  - "Step one: #randomKeywordCardAction.capitalize#[_payoff:,,#gameActionPayoff#]. Step two: [_noise:#soundEmanation#]#_noise.capitalize# [_how:at #_them#,#adverb#]#_how# (#gameActionReaction#). Step three: [_nextStep:one,two][_step3:profit,#verbReflexive# yourself,#verbStrictlyIntransitive#,Go to Step #_nextStep#]#_step3.capitalize#. Optional step four: [_verb1:pet,#verbTransitive#][_pet:#_cardSomeCreatureType1##neutralPronouns#][_verb2:thank,berate,praise,congratulate,confront,salute,applaud,tease][_goodPet:good #_pet#,#adj# #_pet#][_verb3:#verbIntransitiveGerund#,#verbReflexiveGerund# #themselves#,being #_goodPet.a#][_activityAdj:leisurely,long,quiet,well-deserved][_activityTime:morning,afternoon,evening,weekend,day,week][_activityVerb:practice,take up,research,plan #_activityAdj.a# #_activityTime# of][_activity:#nounActivity#,#verbIntransitiveGerund#][_step4:#_verb1# your #_pet# and #_verb2# #them# for #_verb3#,practice #nounActivity#]#_step4.capitalize#."
 
 cotdTextDescription:
   - "It's no surprise that #_cardcolor.capitalize#'s [_superlative:#cardSuperlative#,second-#cardSuperlative#,#adjSuperlative#]#_superlative# #_cardCategory# finds its way into almost every [_decktype:#format#,#deckArchOrCategory#]#_decktype# deck that can support it. Plus it [_verbs:offers,enables,makes possible]#_verbs# some of the most #interestingPlay# the game has ever seen."
@@ -120,7 +126,30 @@ cotdCustomQueryDecscription:
 - >
   [separator:the][#separator.cardSearchTwoParter(1,,not name%3A"?of " not name%3A"?for " not name%3A"?to " not name%3A"?into " not name%3A"?in " not name%3A"?with " not name%3A"?at " t%3Ainstant OR t%3Asorcery)#][_firstPart:#_cardNameFirstPart1#][_lastPart:#_cardNameSecondPart1#]
   [_cardname:#_cardName1#][#cotdCardNameSearch#]
-  Given that this card can #_firstPart.lowercase#, among others, [_cardlinkName:#randomCreatureCard#]#_cotdHtmlCardLink#, [_cardlinkName:#randomCreatureCard#]#_cotdHtmlCardLink#, and [_cardlinkName:#randomCreatureCard#]#_cotdHtmlCardLink#, the "#_lastPart.lowercase#" part of the name is beginning to feel[_adv:, pretty, fairly, somewhat, incredibly, quite distinctly]#_adv#... [_adj:#adj#,#adj#,#kindaGood#,#reallyGood#]#_adj#. 
+  Given that this card can #_firstPart.lowercase#, among others, [_cardlinkName:#randomCreatureCard#]#_cotdHtmlCardLink#, [_cardlinkName:#randomCreatureCard#]#_cotdHtmlCardLink#, and [_cardlinkName:#randomCreatureCard#]#_cotdHtmlCardLink#, the "#_lastPart.lowercase#" part of the name is beginning to feel[_adv:, pretty, fairly, somewhat, incredibly, quite distinctly]#_adv#... [_adj:#adj#,#adj#,#kindaGood#,#reallyGood#]#_adj#.
+- >
+  [#cotdLegendaryCreatureSearch#][_lordCard:#_lordCard#,#_lordCard#,#randomCreatureCard#][_legendFullName:#_cardname#][_finallyPhrase:#_lordFinally#][#_lordOrCommander#][#cotdImageNameAndUrl#]
+  #_finallyPhrase# #_deck# #_finally##has# the #_lordDesc# #they# #_need# to be [_viable:viable,good enough,competetive,playable]#_viable##_where#.
+
+_lordFinally: 
+- "Finally,[_finally:]"
+- "At last,[_finally:finally ]"
+- "At long last,[_finally:finally ]"
+- "Rejoice![_finally:finally ]"
+- "Hurray![_finally:finally ]"
+- "Huzzah![_finally:finally ]"
+- "It's about time:[_finally:finally ]"
+- "[_wait:wait,long wait]The #_wait# is over:[_finally:finally ]"
+- "#_legendFullName# approves![_legendName:#deckLimitedArchetype.capitalize#][_finally:finally ]"
+- "#_legendFullName#'s prayers have been answered![_legendName:#deckLimitedArchetype.capitalize#][_finally:finally ]"
+- "[_gift:A gift,A present,Great news]#_gift# from #_cardSet1#:[_finally:finally ]"
+
+_lordOrCommander:
+- "#_lord#[_deck:#_cardSomeCreatureType1# tribal,#_subTypesSlashed# tribal, #constuctedFormat# #_cardSomeCreatureType1.s#][#neutralPronouns#][_need:needs][_lordDesc:lord][_where:]"
+- "#_lord#[_deck:#_legendName# decks][#pluralPronouns#][_need:need][_lordDesc:#_cardSomeCreatureType1# lord][_where: in Commander, in EDH]"
+- "[_deck:#_cardSomeCreatureType1# tribal][#neutralPronouns#][_need:needs][_lordDesc:commander,general][_where: in EDH]"
+
+_subTypesSlashed: "#_cardFullSubtype1.replace( ,/)#"
 
 _badDream:
 - "[_discovery:getting lost at,being naked at,being late to,being teased at,#verbIntransitiveGerund# in,flunking out of][_schoolType:#_creatureType#,#characterClass#][_italicText:#_discovery# #_schoolType# school]#_italicize#"
@@ -161,6 +190,10 @@ gameActionReaction:
 - "[_who:#pro#,#character#]#_who# does this all the time"
 - "yes, we're serious"
 - "and wait for #_them# to #_noise# back"
+
+cotdPetOwner:
+- "#historicalFigure#"
+- "#character#"
 
 adjOrCardQuality:
 - "#adj#"
@@ -219,6 +252,11 @@ gameplayPosition:
 gameplayHelp:
 -
 - help
+
+_cardKindaGood:
+- "#kindaGood#"
+- "#adjValue#"
+- "#cardQuality#"
 
 adjChallenging:
 - thorny
@@ -317,10 +355,12 @@ surprisingResult:
   - "it's the only card in Magic that lets you #marginalThingToDo#"
   - "it can let you take up to #count# extra turns"
   - "you get to return it to your hand"
-  - "you can combo it with #cardAlone#"
-  - "it's going to be #rarity.a# in [_italicText:#teaserCardSet.capitalizeAll#]#_italicize#"
+  - "you can combo it with [_cardlinkName:#cardAlone#]#_cotdHtmlCardLink#"
+  - "it's going to be [_future:#rarity.a#,#rarity.a#,reprinted]#_future# in [_italicText:#teaserCardSet.capitalizeAll#]#_italicize#"
   - "it's #_cardRarity1.lowercase.a#"
   - "it's #_cardtype.lowercase.a#"
+  - "it lets you #randomKeywordAction#"
+  - "it enables you to #randomKeywordAction#"
 
 cardWhichDrawsCards:
   - Ancestral Vision
