--- a/src/data/grammar/mtg/card-related/searchable-color-combos.yaml
+++ b/src/data/grammar/mtg/card-related/searchable-color-combos.yaml
@@ -34,7 +34,7 @@ searchableMulticolorWithLetters:
 - "BUG#color_BUG#"
 
 searchableMulticolorWithWords:
-- "Blue-White#color_WB#"
+- "Blue-White#color_UW#"
 - "Blue-Black#color_UB#"
 - "Blue-Red#color_UR#"
 - "Blue-Green#color_UG#"
